# sql_reverse

./: .gitignore  Cargo.toml  README.md  default_postgres.json  mysql_default.json  postgres_default.json  reverse.sh  reverse.yml  reverse_mysql.yml  reverse_postgres.yml  reverse_sqlite.yml  reverse_tdengine.yml  sqlite_default.json
dir/: mod.rs  微博_作品  微博_数据.rs  微博_用户  微博_用户.rs
mysql_struct/: Cargo.toml
mysql_struct/src/: lib.rs  mysql_struct.rs
sql_reverse/: Cargo.toml  README.md
sql_reverse/src/: app_arguments.rs  main.rs
sql_reverse/src/error/: custom_macro.rs  error.rs  mod.rs
sql_reverse/src/keywords/: mod.rs  rust.rs
sql_reverse/src/reverse_impl/: clickhouse_impl.rs  common.rs  export.rs  mod.rs  mysql_impl.rs  postgres_impl.rs  sqlite_impl.rs  tdengine_impl.rs
sql_reverse/src/reverse_struct/: export.rs  gen_struct.rs  mod.rs  mysql_impl.rs  postgres_impl.rs  sqlite_impl.rs
sql_reverse/src/table/: clickhouse.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  tdengine.rs
sql_reverse/src/template/: clickhouse.rs  kit.rs  mod.rs  mysql.rs  postgres.rs  render.rs  sqlite.rs  tdengine.rs  template_type.rs
sql_reverse_error/: Cargo.toml  README.md
sql_reverse_error/src/: custom_macro.rs  result.rs
sql_reverse_struct/: Cargo.toml  README.md
sql_reverse_struct/src/: common.rs  export.rs  gen_struct.rs  lib.rs  mysql_struct.rs  postgres_struct.rs
sql_reverse_template/: Cargo.toml  README.md
sql_reverse_template/src/: lib.rs  render.rs  table.rs
sql_reveser/: Cargo.toml  README.md
sql_reveser/src/: app_arguments.rs  main.rs
sql_reveser_error/: Cargo.toml  README.md
sql_reveser_error/src/: lib.rs  result.rs
sql_reveser_struct/: Cargo.toml  README.md
sql_reveser_struct/src/: common.rs  lib.rs  mysql_struct.rs  postgres_struct.rs
sql_reveser_template/: Cargo.toml
sql_reveser_template/src/: lib.rs  render.rs  table.rs
sql_template/: Cargo.toml
sql_template/src/: gen_struct.rs  lib.rs  table.rs
templates/: base.tera  custom.tera  postgres.tera  sqlite.tera  sqlx.tera  tdengine.tera
tmp/: mysql.tera  postgres.tera  sqlite.tera
