[package]
name = "mysql_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql_reveser_error = { path = "../sql_reveser_error"}
sql_template = { path = "../sql_template" }
async-trait = "0.1.53"
mysql = "22.1.0"
once_cell = "1.10.0"
quicli = "0.4.0"
serde_yaml = "0.8.23"
serde = {version = "1.0.136", features = ["derive"]}
regex = "1.5.5"
Inflector = "0.11.4"
