[package]
name = "sql_reverse"
version = "0.1.8"
edition = "2021"
homepage = "https://github.com/ptechen"
documentation = "https://docs.rs/sql_reverse"
repository = "https://github.com/ptechen/sql_reverse.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Generate the multiple programming languages structure based on the MySQL/PostgresSQL table structure"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sql_reverse_struct = { version = "^0.1" }
sql_reverse_struct = { path = "../sql_reverse_struct"}
#sql_reverse_error = { version = "^0.1" }
sql_reverse_error = { path = "../sql_reverse_error" }
quicli = "0.4.0"
#sql_reverse_template = { version = "^0.1" , features = ["tokio"], default_features = false}
sql_reverse_template = { path = "../sql_reverse_template" , features = ["tokio"], default_features = false}
structopt = "0.3.26"
tokio = { version = "1", features = ["full"]}
log = "0.4.16"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

