[package]
name = "sql_reverse"
version = "0.1.13"
edition = "2024"
homepage = "https://github.com/ptechen"
documentation = "https://docs.rs/sql_reverse"
repository = "https://github.com/ptechen/sql_reverse.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Generate the multiple programming languages structure based on the MySQL/PostgresSQL table structure"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tokio = { version = "1", features = ["full"]}
log = "0.4.16"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "all-databases"] }
serde_yaml = "0.9.33"
regex = "1.5.6"
Inflector = "0.11.4"
serde_json = "1"
termcolor = "1.4.1"
tera = "1"
thiserror = "2.0.12"
clap = "4.5.38"
fn_macro = "0.1.4"