[package]
name = "sql_reverse_error"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/sql_reverse/blob/main/README.md"
repository = "https://github.com/ptechen/sql_reverse.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "sql reverse error"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "22.1.0"
quicli = "0.4.0"
regex = "1.5.6"
serde_json = "1.0.81"
serde_yaml = "0.8.23"
tera = "1.15.0"
tokio-postgres = "0.7.6"
