[package]
name = "sql_reverse_struct"
version = "0.1.1"
edition = "2021"
documentation = "https://github.com/ptechen/sql_reverse/blob/main/README.md"
repository = "https://github.com/ptechen/sql_reverse.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "sql reverse struct"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql_reverse_error = { version = "^0.1" }
sql_reverse_template = { version = "^0.1" }
async-trait = "0.1.53"
mysql = "22.1.0"
once_cell = "1.10.0"
quicli = "0.4.0"
serde_yaml = "0.8.23"
serde = {version = "1.0.136", features = ["derive"]}
regex = "1.5.5"
Inflector = "0.11.4"
tokio = "1"
tokio-postgres = "0.7.6"
postgres = "0.19.3"
tracing = "0.1.34"
