[package]
name = "sql_reveser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_struct = { path = "../mysql_struct" }
quicli = "0.4.0"
sql_template = { path = "../sql_template", features = ["tokio"], default_features = false}
structopt = "0.3.26"
tokio = { version = "1.18.0", features = ["full"]}

