[package]
name = "sql_reveser"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/sql_reveser/blob/main/README.md"
repository = "https://github.com/ptechen/sql_reveser.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "sql reveser template"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql_reveser_struct = { version = "^0.1"}
sql_reveser_error = { version = "^0.1" }
quicli = "0.4.0"
sql_reveser_template = { version = "^0.1" , features = ["tokio"], default_features = false}
structopt = "0.3.26"
tokio = { version = "1", features = ["full"]}
log = "0.4.16"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

