[package]
name = "sql_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql_reveser_error = { path = "../sql_reveser_error"}
async-std = "1.11.0"
async-trait = "0.1.53"
quicli = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
tera = "1.15.0"
tokio = {version = "1.17.0", features = ["full"]}

[features]
default = ["tokio"]
async-std = []
tokio = []
